Refactor AutoSteal logic